--- a/NODE/aulaEXPRESS/package.json
+++ b/NODE/aulaEXPRESS/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
     "core-js": "^3.6.5",
     "css-loader": "^4.3.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^1.2.1"
   },
