seçao 10: injetando conteudo nas views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
-  }
+  },
+  "emmet.includeLanguages": {
+    "ejs": "html",
+  },
 }
