--- a/api_rest/package.json
+++ b/api_rest/package.json
@@ -16,5 +16,8 @@
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.4",
     "sucrase": "^3.15.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
