--- a/Aulas_TypeScript/package.json
+++ b/Aulas_TypeScript/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
@@ -23,5 +24,8 @@
     "typescript": "^4.1.3",
     "webpack": "^5.21.1",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "validator": "^13.5.2"
   }
 }
